# Job_Tracker

./: .gitignore  .pre-commit-config.yaml  README.md
pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml  render.yaml  requirements.txt  server.py
pipeline/analyzer/: ats_keywords.py  embedding_filter.py  freshness_filter.py  jd_preprocessor.py  llm_analyzer.py
pipeline/config/: settings.py
pipeline/core/: api_client.py  config_loader.py  constants.py  langfuse_client.py  llm.py  logger.py  models.py  pipeline.py  startup_utils.py  utils.py
pipeline/docs/: aggregator-research.md  analysis.md  architecture.md  concepts.md  dashboard.md  database.md  demo.md  design-decisions.md  email-pipeline.md  langfuse.md  lessons-learned.md  llm-stack-rationale.md  ml-stack.md  pipeline.md  prompt-engineering.md  safety.md  scrapers.md  setup.md  telegram-and-scheduler.md  walkthrough.md
pipeline/emailer/: cold_email.py  cover_letter.py  email_finder.py  sender.py  validator.py  verifier.py
pipeline/scraper/: __init__.py  aggregator_scraper.py  api_boards.py  ats_direct.py  dedup.py  jobspy_scraper.py  registry.py  remote_boards.py  source_router.py  startup_scouts.py  utils.py
pipeline/scripts/: _startup_analyzer.py  dry_run.py  push_prompts.py  startup_scout.py
pipeline/tests/: test_api_client.py  test_config_loader.py  test_config_validation.py  test_dedup.py  test_email_finder.py  test_embedding_filter.py  test_llm.py  test_normalizers.py  test_pipeline.py  test_registry.py  test_scraper_utils.py  test_sender.py  (+3 more)
(+10 files in other folders)
